--- a/Proyecto2024_collabo/src/app.html
+++ b/Proyecto2024_collabo/src/app.html
@@ -12,6 +12,12 @@
 </html>
 
 <style>
+	@import url('https://fonts.cdnfonts.com/css/utendo');
+    
+    *{
+        font-family: 'Utendo', sans-serif;
+    }
+
 	body{
 		margin: 0;
 		padding: 0;
